# Bot

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile-premium-dev  Dockerfile-premium-prod  Dockerfile-prod  JSON to SQL.py  LICENSE  README.md  automatic_update.py  clippy.toml  cluster_launcher.py  config-docker.ini  config-docker.toml  config-example.ini  config-selfhost.ini  config-selfhost.toml  crowdin.yml  docker-compose-example.yml  docker-compose-free.yml  docker-compose-premium.yml  docker-compose.yml  espeak_process.py  flake.nix  langs.json  lavalink_config.yml  main.py  patched_FFmpegPCM.py  player.py  requirements.txt  setup.py  testing-needs.txt  update_translations.py
.cargo/: config.toml
.github/workflows/: build.yml  bump.yml  ci_workflow.yml  docker.yml  lint.yml
Discord-TTS-Bot/: setup.py
Discord-TTS-Bot/cogs/: .gitignore  common.py
cogs/: DM_handler.py  clustering.py  cmds_dev.py  cmds_extra.py  cmds_main.py  cmds_owner.py  cmds_settings.py  cmds_trusted.py  common_owner.py  common_trusted.py  common_user.py  events_analytics.py  events_errors.py  events_main.py  events_other.py  help.py  jsk.py  loops.py  loops.py.old  slash_commands.py
extensions/: cache_handler.py  database_handler.py
src/: analytics.rs  bot_list_updater.rs  constants.rs  database.rs  database_models.rs  error.rs  errors.rs  funcs.rs  logging.rs  looper.rs  macros.rs  main.rs  migration.rs  opt_ext.rs  patreon_check.rs  startup.rs  structs.rs  traits.rs  translations.rs  web_updater.rs
src/commands/: help.rs  main.rs  mod.rs  other.rs  owner.rs  premium.rs  settings.rs
src/commands/settings/: mod.rs  setup.rs  voice_paginator.rs
src/data/: langs-premium.json  langs.json
src/events/: channel.rs  guild.rs  member.rs  message.rs  mod.rs  other.rs  ready.rs  voice_state.rs
translations/: master.pot
translations/en-US/: en-US.mo  en-US.po
translations/es-ES/: es-ES.mo  es-ES.po
translations/ja/: jp.mo  jp.po
translations/ja-JP/: ja-JP.po
translations/ko/: ko.mo  ko.po
translations/ko-KR/: ko-KR.mo  ko-KR.po
translations/pt/: pt.mo  pt.po
translations/pt-BR/: pt-BR.po
tts_commands/: Cargo.toml
tts_commands/src/: help.rs  lib.rs  main_.rs  other.rs  owner.rs  premium.rs
tts_commands/src/settings/: mod.rs  owner.rs  setup.rs  voice_paginator.rs
tts_commands/src/settings/voice_paginator/: cursor.rs  mod.rs
tts_core/: Cargo.toml
tts_core/src/: analytics.rs  common.rs  constants.rs  database.rs  database_models.rs  errors.rs  lib.rs  macros.rs  opt_ext.rs  process_msg.rs  songbird.rs  structs.rs  traits.rs  translations.rs
tts_core/src/voice/: mod.rs  models.rs
tts_events/: Cargo.toml
tts_events/src/: channel.rs  guild.rs  lib.rs  member.rs  message.rs  other.rs  ready.rs  voice_state.rs
tts_events/src/message/: tts.rs
tts_migrations/: Cargo.toml
tts_migrations/src/: lib.rs
tts_tasks/: Cargo.toml
tts_tasks/src/: analytics.rs  bot_list_updater.rs  lib.rs  logging.rs  web_updater.rs
utils/: __init__.py  basic.py  cache.py  classes.py  constants.py  decos.py  funcs.py  logger.py  settings.py  singular.py  views.py  websocket_types.py
