[package]
name = "discord_tts_bot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "tts_core",
    "tts_commands",
    "tts_events",
    "tts_tasks",
    "tts_migrations",
]

[profile.release]
lto = "thin"
panic = "abort"
debug = 2

[dependencies]
const_format = "0.2"
small-fixed-array = { version = "0.4", features = ["nightly"] }

sqlx = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
poise = { workspace = true }
anyhow = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
songbird = { workspace = true }
parking_lot = { workspace = true }

tts_core = { path = "tts_core" }
tts_tasks = { path = "tts_tasks" }
tts_events = { path = "tts_events" }
tts_commands = { path = "tts_commands" }
tts_migrations = { path = "tts_migrations" }

[dependencies.symphonia]
features = ["mp3", "ogg", "wav", "pcm"]
default-features = false
version = "0.5.3"

[workspace.dependencies]
regex = "1"
serde = "1"
anyhow = "1"
tracing = "0.1"
sysinfo = "0.30"
itertools = "0.12"
arrayvec = "0.7.4"
parking_lot = "0.12"
to-arraystring = "0.1"
typesize = { version = "0.1.2", features = ["arrayvec"] }

[workspace.dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "postgres", "runtime-tokio-rustls"]

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls"]

[workspace.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "signal", "parking_lot"]

[workspace.dependencies.dashmap]
version = "5"
default-features = false

[workspace.dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
features = ["typesize", "temp_cache"]
default-features = false
branch = "next"

[workspace.dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"

[workspace.dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
features = ["builtin-queue"]
branch = "serenity-next"
