[package]
name = "discord_tts_bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "tts_core",
    "tts_commands",
    "tts_events",
    "tts_tasks",
    "tts_migrations",
]

[profile.release]
lto = "thin"
panic = "abort"
debug = 2

[profile.dev.package.syn]
opt-level = 3

[dependencies]
const_format = "0.2"
small-fixed-array = { version = "0.4.5", features = [
    "nightly",
    "to-arraystring",
] }

serde.workspace = true
tokio.workspace = true
poise.workspace = true
anyhow.workspace = true
sysinfo.workspace = true
tracing.workspace = true
reqwest.workspace = true
dashmap.workspace = true
songbird.workspace = true
mini-moka.workspace = true
parking_lot.workspace = true

tts_core = { path = "tts_core" }
tts_tasks = { path = "tts_tasks" }
tts_events = { path = "tts_events" }
tts_commands = { path = "tts_commands" }
tts_migrations = { path = "tts_migrations" }

[dependencies.symphonia]
features = ["mp3", "ogg", "wav", "pcm"]
default-features = false
version = "0.5.3"

[workspace.dependencies]
regex = "1"
anyhow = "1"
serde = "1.0.209"
tracing = "0.1"
sysinfo = "0.31.3"
aformat = "0.1.3"
itertools = "0.13"
arrayvec = "0.7.6"
parking_lot = "0.12"
mini-moka = { version = "0.10.3", features = ["sync"] }
# TODO: Remove `dashmap` once mini_moka releases a breaking version with dashmap 6.
typesize = { version = "0.1.9", features = ["arrayvec", "dashmap", "details"] }

[workspace.dependencies.sqlx]
version = "0.8.1"
default-features = false
features = ["macros", "postgres", "runtime-tokio-rustls"]

[workspace.dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["rustls-tls"]

[workspace.dependencies.tokio]
version = "1.39.3"
features = ["rt-multi-thread", "signal", "parking_lot"]

[workspace.dependencies.dashmap]
version = "6.1.0"
default-features = false

[workspace.dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
features = ["typesize", "temp_cache"]
default-features = false
branch = "next"

[workspace.dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"

[workspace.dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
features = ["builtin-queue"]
branch = "serenity-next"

[package.metadata.cargo-machete]
ignored = [
    "const_format", # Used by database initialisation in macro
    "symphonia",    # Enabled for the features
]
